--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "pino-pretty": "^13.0.0",
         "react": "^18",
         "react-dom": "^18",
+        "thirdweb": "^5.91.0",
         "wagmi": "^2.14.6"
     },
     "devDependencies": {
