--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@graphql-tools/schema": "^10.0.14",
         "@rainbow-me/rainbowkit": "^2.2.1",
         "@types/lodash": "^4.17.13",
+        "axios": "^1.8.2",
         "colors": "^1.4.0",
         "dotenv": "^16.4.7",
         "ethers": "^6.13.4",
@@ -33,7 +34,6 @@
         "pino-pretty": "^13.0.0",
         "react": "^18",
         "react-dom": "^18",
-        "thirdweb": "^5.91.0",
         "wagmi": "^2.14.6"
     },
     "devDependencies": {
